policies/templates/gcp_iam_restrict_service_account_creation_v1.yaml
# Copyright 2019 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-iam-restrict-service-account-creation-v1
spec:
  crd:
    spec:
      names:
        kind: GCPIAMRestrictServiceAccountCreationConstraintV1
        plural: gcpiamrestrictserviceaccountcreationconstraintv1
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
   validation.gcp.forsetisecurity.org:
      rego: |
          #INLINE("validator/gcp_iam_restrict_service_account_creation.rego")
          # Copyright 2019 Google LLC
          #
          # Licensed under the Apache License, Version 2.0 (the "License");
          # you may not use this file except in compliance with the License.
          # You may obtain a copy of the License at
          #
          #      http://www.apache.org/licenses/LICENSE-2.0
          #
          # Unless required by applicable law or agreed to in writing, software
          # distributed under the License is distributed on an "AS IS" BASIS,
          # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
          # See the License for the specific language governing permissions and
          # limitations under the License.
          #
          
          package templates.gcp.GCPIAMRestrictServiceAccountCreationConstraintV1
          
          import data.validator.gcp.lib as lib
          
          deny[{
          	"msg": message,
          	"details": metadata,
          }] {
          	constraint := input.constraint
          	asset := input.asset
          	asset.asset_type == "google.iam.ServiceAccount"
          	service_account := asset.resource.data
          	service_account_email := service_account.email
          
          	# TODO(johngao): should include project id.
          endwith(	service_account_email, "iam.gserviceaccount.com")
          
          	message := sprintf("%v: should not exist by policy.", [asset.name])
          	metadata := {"resource": asset.name}
          }
          #ENDINLINE
